--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Kate + Jason!</title>
     
     <link href="style.css" rel="stylesheet" type="text/css">
     <style>
@@ -92,8 +92,8 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="">The Couple</a></li>
 				<li><a href="">The Day</a></li>
+				<li><a href="">The Couple</a></li>
 				<li><a href="">RSVP</a></li>
 				<li><a href="">Registry</a></li>
 				<li><a href="">The Gang</a></li>
