--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		}
 		nav {
 			text-transform: uppercase;
-			background-color: #e7e1c7;
+			/* background-color: #e7e1c7; */
 			margin-top: 0;
 			margin-bottom: 0;
 			height: 100px;
@@ -97,12 +97,14 @@
 		h3 {
 			text-align: center;
 			font-weight: normal;
+			clear:both;
 		}
 		
 		.five-column {
 			width: 730px;
 			margin-left: auto;
 			margin-right: auto;
+			clear:both;
 		}
 		
 		.center {
@@ -111,6 +113,32 @@
 		
 		p {
 			line-height: 2;
+		}
+		
+
+		
+		.left-column {
+			width: 300px;
+			float: left;
+		}
+		
+		.right-column {
+			width: 430px;
+			float: right;
+		}
+		
+		.address {
+			/* margin-top: 0; */
+			top: 50%;
+			position: relative;
+			transform: translateY(80%);
+			-webkit-transform: translateY(80%);
+			-ms-transform: translateY(80%);
+			line-height: 2;
+		}
+		
+		.clearfix {
+			clear: both;
 		}
 	</style>
 </head>
@@ -137,13 +165,45 @@
 				<li><a href="">The Gang</a></li>
 			</ul> -->
 		</nav>
-		<h3>Ceremony & Reception</h3>
+		
+		<!-- Ceremony -->
+		<h3 class="clearfix">Ceremony & Reception</h3>
 		<p class="five-column">The ceremony will start promptly at 4pm in the afternoon at the Appel Inn, Altamont NY. The reception will also be at the Inn and run until 10pm. Arrangements have been made for transportation back to the hotel.</p>
+		
+		<div class="five-column">
+			<div class="left-column">
+				<div class="address">
+					The Appel Inn<br>
+					590 Route 146<br>
+					Altamont, New York 12009
+				</div>
+			</div>
+			
+			<div class="right-column">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5863.470835250952!2d-73.98594220502969!3d42.7093227915015!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de771dae5e3ae7%3A0x3a61e56fdfb31fc5!2sAppel+Inn!5e0!3m2!1sen!2sus!4v1422738161824" width="400" height="300" frameborder="0" style="border:0"></iframe>
+			</div>
+		</div>
 		
 		<!-- Hotel -->
 		<h3>Hotel</h3>
 		<p class="five-column">We have reserved a block of rooms at the Best Western Albany Airport Inn. The holte has also arranged for a complimentary shuttle at the end of the evening and breakfast the following morning. Please mention the Pais/Brennan wedding when making your reservation; the rate should be $110 per night.</p>
 		<p class="center">Reservations must be made before <strong>July 15th</strong> to join the block.</p>
+		
+		<div class="five-column">
+			<div class="left-column">
+				<div class="address">
+					Best Western Albany Airport Inn<br>
+					200 Wolf Road<br>
+					Albany, New York 12205<br>
+					518-458-1000
+				</div>
+			</div>
+			
+			<div class="right-column">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2931.012885429563!2d-73.800572!3d42.72461800000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de0c8b8c639a67%3A0xf8c5498fca504aca!2sBest+Western+Albany+Airport+Inn!5e0!3m2!1sen!2sus!4v1422740406044" width="400" height="300" frameborder="0" style="border:0"></iframe>
+			</div>
+		</div>
+
 		
 		<!-- Questions? -->
 		<h3>Questions?</h3>
