--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
 		</nav>
 		
 		<!-- Ceremony -->
-		<h3 class="clearfix">Ceremony & Reception</h3>
-		<p class="five-column">The ceremony will start promptly at 4pm in the afternoon at the Appel Inn, Altamont NY. The reception will also be at the Inn and run until 10pm. Arrangements have been made for transportation back to the hotel.</p>
+		<h3 class="clearfix">August 15, 2015. Ceremony & Reception</h3>
+		<p class="five-column">The ceremony will start promptly at <strong>4pm</strong> in the afternoon at the <a href='http://www.appelinn.com'>Appel Inn, Altamont NY</a>. The reception will also be at the Inn and run until 10pm. Arrangements have been made for transportation back to the hotel.</p>
 		
 		<div class="five-column">
 			<div class="left-column">
 				<div class="address">
-					The Appel Inn<br>
+					<a href='http://www.appelinn.com'>The Appel Inn</a><br>
 					590 Route 146<br>
 					Altamont, New York 12009
 				</div>
@@ -186,13 +186,13 @@
 		
 		<!-- Hotel -->
 		<h3>Hotel</h3>
-		<p class="five-column">We have reserved a block of rooms at the Best Western Albany Airport Inn. The holte has also arranged for a complimentary shuttle at the end of the evening and breakfast the following morning. Please mention the Pais/Brennan wedding when making your reservation; the rate should be $110 per night.</p>
+		<p class="five-column">We have reserved a block of rooms at the <a href="http://book.bestwestern.com/bestwestern/US/NY/Albany-hotels/BEST-WESTERN-Albany-Airport-Inn/Hotel-Overview.do?propertyCode=33089">Best Western Albany Airport Inn</a>. The hotel has also arranged for a complimentary shuttle at the end of the evening and breakfast the following morning. Please mention the Pais/Brennan wedding when making your reservation; the rate should be $110 per night.</p>
 		<p class="center">Reservations must be made before <strong>July 15th</strong> to join the block.</p>
 		
 		<div class="five-column">
 			<div class="left-column">
 				<div class="address">
-					Best Western Albany Airport Inn<br>
+					<a href="http://book.bestwestern.com/bestwestern/US/NY/Albany-hotels/BEST-WESTERN-Albany-Airport-Inn/Hotel-Overview.do?propertyCode=33089">Best Western Albany Airport Inn</a><br>
 					200 Wolf Road<br>
 					Albany, New York 12205<br>
 					518-458-1000
