Use typekit futura for people who don't have iOS / OS X.
Poor souls.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>Kate + Jason!</title>
     
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <!-- <link href="style.css" rel="stylesheet" type="text/css"> -->
+    <script src="//use.typekit.net/gtu4izi.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <style>
 	    /* This should all go in a stylesheet file... */
 		body {
-			font-family: Futura, "Helvetica Neue", Helvetica, sans-serif;
+			font-family: Futura, "futura-pt", "Helvetica Neue", Helvetica, sans-serif;
 			margin: 0;
 			background-color: #f4f4f4;
 			font-size: 20px;
