Testing out some changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
 	<title>We're getting married!</title>
 	
-	<link rel="stylesheet" type="text/css" href="style3.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,400,700,600,800' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,400,600' rel='stylesheet' type='text/css'>
 	
 </head>
 
@@ -16,8 +16,8 @@
 <section class="top-container">
 
 	<div class="top-bar">
-		<h1 style="text-align: center;" >Kate & Jason</h1>
-		<h2 style="text-align: center;">8.15.15</h2>
+		<h1  >Kate<br/>+<br/>Jason</h1>
+		<h2 >8.15.15</h2>
 	</div>
 
 </section>
@@ -27,28 +27,28 @@
 	<div class="bottom-bar">
 		<div class="bottom-square">
 			<a href="#">
-			<img class="bottom-image" src="images/computer-icon-yel.png"/>
+			<img class="bottom-image" alt="How We Met" src="images/computer-icon-yel.png"/>
 			<h4>How We Met</h4>
 			</a>
 		</div>
 		
 		<div class="bottom-square">
 			<a href="#">
-			<img class="bottom-image" src="images/sun-icon-yel.png" />
-			<h4>When Is This Party?</h4>
+			<img class="bottom-image" alt="When Is This Party?" src="images/sun-icon-yel.png" />
+			<h4>When's The Party?</h4>
 			</a>
 		</div>
 		
 		<div class="bottom-square">
 			<a href="#">
-			<img class="bottom-image" src="images/env-icon-yel.png" />
+			<img class="bottom-image" alt="You Coming?" src="images/env-icon-yel.png" />
 			<h4>You Coming?</h4>
 			</a>
 		</div>
 		
 		<div class="bottom-square">
 			<a href="#">
-			<img class="bottom-image" src="images/plane-icon-yel.png" />
+			<img class="bottom-image" alt="The AFTER Party" src="images/plane-icon-yel.png" />
 			<h4>The AFTER Party</h4>
 			</a>
 		</div>
