--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
 
 		</header>
 		<nav>
-			<h2 class="menu"><span class="selected">The Day</span></h2>
-<!-- 			<ul>
-				<li><a href="">The Day</a></li>
-				<li><a href="">The Couple</a></li>
-				<li><a href="">RSVP</a></li>
-				<li><a href="">Registry</a></li>
-				<li><a href="">The Gang</a></li>
-			</ul> -->
+			<ul>
+				<li><a href="index.html" class="selected">The Day</a></li>
+				<li><a href="couple.html">The Couple</a></li>
+			</ul>
 		</nav>
 		
 		<!-- Ceremony -->
