Added text about the beautiful, amazing couple.
Also a link to BJ’s website

--- a/couple.html
+++ b/couple.html
@@ -33,19 +33,19 @@
 		<div class="five-column">
 			<div class="two-column float-left">
 				<img src="images/jason.jpg" />
-				<p>fdsafdsafdsa fdsa fds afdsa fdsa</p>
+				<p><span class="title-case">He</span> likes programming, sushi, <em>Die Hard</em>, puns, rescuing cats, books on education, and cool socks.</p>
 			</div>
 			
 			<div class="two-column float-right">
 				<img src="images/kate.jpg" />
-				<p>fdsafdsafdsa fdsa fds afdsa fdsa</p>
+				<p><span class="title-case">She</span> likes design, tacos, <em>Buffy the Vampire Slayer</em>, all creatures furry and cute, and mystery novels.</p>
 			</div>
 		</div>
 		<p class="five-column">
 			<span class="title-case">They</span> met in October 2010 and have been inseparable ever since. After a few years of long distance between upstate New York and Ontario, Jason & Kate both moved to Brooklyn, NY. They got engaged July 2014 on the corner of Elgin & Waverly in Ottawa, outside <em>The Lieutenant's Pump</em>, where they first met and configred a mutual love of brunch (and each other).
 		</p>
 		<p class="center bigger">❤︎</p>
-		<p class="five-column">The very awesome BJ Enright took engagement pictures to help capture the memory. A sample is below, and you can always look at the larger collection on BJ's gallery.</p>
+		<p class="five-column">The very awesome BJ Enright took engagement pictures to help capture the memory. Take a look at the collection on <a href="http://gallery.bjenright.com/katejason/">BJ's gallery</a>.</p>
 	</div>
 </body>
 </html>
